modelos de event y entry
